<?xml version="1.0"?>
<package format="2">
  <name>depth_viewer</name>
  <version>0.0.0</version>
  <description>The depth_viewer package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>  <!-- 添加 pcl_ros -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>  <!-- 添加 pcl_ros -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_ros</exec_depend>  <!-- 添加 pcl_ros -->
</package>

